set channel 32 and simple password for comms

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,9 @@
 platform = atmelavr
 board = ATmega328P
 framework = arduino
+monitor_speed = 115200 
 
 lib_deps =
-  Adafruit BMP280 Library@1.0.6
-
+  MySensors@2.3.2
+  DHT sensor library@1.3.8
+  Adafruit Unified Sensor@1.1.1
